# garmin-swiftbar

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: config.example.json
scripts/: daily-summary.py  garmin-client.py  garmin-health.30m.py  garmin-sync-daemon.py
src/garmin_health/: __init__.py  config.py  core.py  data.py  models.py  widget.py
tests/: __init__.py  conftest.py  test_config.py  test_data.py  test_models.py  test_widget.py
tests/fixtures/: body_battery_sample.json  daily_stats_sample.json  goals_sample.json  sleep_sample.json  stress_sample.json  weight_sample.json
