[project]
name = "garmin-swiftbar"
version = "2.1.0"
description = "SwiftBar widget and automation for Garmin Connect health data on macOS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Larus Ivarsson"}
]
keywords = ["garmin", "swiftbar", "health", "fitness", "macos", "menu-bar"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Health/Fitness",
]
dependencies = [
    "garminconnect>=0.2.0",
    "pydantic>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/larusivar/garmin-swiftbar"
Repository = "https://github.com/larusivar/garmin-swiftbar"
Issues = "https://github.com/larusivar/garmin-swiftbar/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
